--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   push:
     tags:
       - 'v*'
-  workflow_dispatch:  # Можно запускать вручную
+  workflow_dispatch:
 
 jobs:
   build-windows:
@@ -19,6 +19,19 @@ jobs:
         with:
           python-version: '3.10'
       
+      - name: Get version from tag
+        id: get_version
+        shell: bash
+        run: |
+          if [ "${{ github.ref_type }}" == "tag" ]; then
+            VERSION="${{ github.ref_name }}"
+            VERSION="${VERSION#v}"  # Убираем 'v' из v1.5.0
+          else
+            VERSION="dev"
+          fi
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+          echo "Building version: $VERSION"
+      
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -27,12 +40,12 @@ jobs:
       
       - name: Build Windows
         run: |
-          pyinstaller --onedir --noconsole --clean --name CreditBot main.py
+          pyinstaller --onedir --noconsole --clean --name CreditBotV${{ steps.get_version.outputs.VERSION }} main.py
       
       - name: Create ZIP
         run: |
           cd dist
-          powershell Compress-Archive -Path CreditBot -DestinationPath CreditBot-Windows.zip
+          powershell Compress-Archive -Path CreditBotV${{ steps.get_version.outputs.VERSION }} -DestinationPath CreditBot-Windows.zip
       
       - name: Upload Windows build
         uses: actions/upload-artifact@v4
@@ -52,6 +65,19 @@ jobs:
         with:
           python-version: '3.10'
       
+      - name: Get version from tag
+        id: get_version
+        shell: bash
+        run: |
+          if [ "${{ github.ref_type }}" == "tag" ]; then
+            VERSION="${{ github.ref_name }}"
+            VERSION="${VERSION#v}"
+          else
+            VERSION="dev"
+          fi
+          echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
+          echo "Building version: $VERSION"
+      
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -60,12 +86,12 @@ jobs:
       
       - name: Build macOS
         run: |
-          pyinstaller --onedir --noconsole --clean --name CreditBot main.py
+          pyinstaller --onedir --noconsole --clean --name CreditBotV${{ steps.get_version.outputs.VERSION }} main.py
       
       - name: Create ZIP
         run: |
           cd dist
-          zip -r CreditBot-macOS.zip CreditBot
+          zip -r CreditBot-macOS.zip CreditBotV${{ steps.get_version.outputs.VERSION }}
       
       - name: Upload macOS build
         uses: actions/upload-artifact@v4
@@ -100,16 +126,18 @@ jobs:
             
             ### 📦 Скачать:
             - **Windows** (x64): `CreditBot-Windows.zip`
+              - Внутри: `CreditBotV${{ github.ref_name }}.exe`
             - **macOS** (Intel/M1/M2/M3): `CreditBot-macOS.zip`
+              - Внутри: `CreditBotV${{ github.ref_name }}`
             
             ### 📋 Установка:
             1. Скачай архив для своей ОС
             2. Распакуй в любую папку
-            3. Запусти `CreditBot` / `CreditBot.exe`
+            3. Запусти exe файл (Windows) или приложение (macOS)
             
-            ### ⚙️ Первый запуск:
-            - Введи данные аккаунта
-            - Настрой Telegram (опционально)
-            - Готово!
+            ### ✨ Что нового:
+            - Поддержка macOS (Intel и Apple Silicon)
+            - Кроссплатформенная генерация HWID
+            - Автоматическая сборка через GitHub Actions
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
