--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -119,11 +119,7 @@ jobs:
           cat > dist/start.command << 'EOF'
           #!/bin/bash
           cd "$(dirname "$0")"
-          
-          # Снимаем quarantine с приложения
           xattr -dr com.apple.quarantine CreditBot.app 2>/dev/null || true
-          
-          # Запускаем
           open CreditBot.app
           EOF
           chmod +x dist/start.command
@@ -174,43 +170,24 @@ jobs:
             CreditBot-Windows.zip
             CreditBot-macOS.zip
           body: |
-            ## 🚀 CreditBot ${{ github.ref_name }}
+            ## CreditBot Release
             
-            ### 📦 Установка:
+            **Windows Installation:**
+            1. Download CreditBot-Windows.zip
+            2. Extract to any folder
+            3. Run the .exe file
             
-            **Windows (x64):**
-            1. Скачай `CreditBot-Windows.zip`
-            2. Распакуй в любую папку
-            3. Запусти `CreditBotV${{ github.ref_name }}.exe`
+            **macOS Installation:**
+            1. Download CreditBot-macOS.zip
+            2. Extract to any folder
+            3. Double-click start.command
+            4. App will launch automatically
             
-            **macOS (Intel/Apple Silicon):**
-            1. Скачай `CreditBot-macOS.zip`
-            2. Распакуй в любую папку
-            3. **Двойной клик** на `start.command` ✨
-            4. Готово! Приложение запустится автоматически
-            
-            > 💡 macOS может спросить разрешение при первом запуске — нажмите "Открыть"
-            
-            ### 🔄 Автообновление:
-            - Для пользователей v1.4.5+ обновление автоматическое (только Windows)
-            
-            ### ✨ Что нового:
-            - ✅ Полная поддержка macOS (.app bundle)
-            - ✅ Запуск в один клик (start.command)
-            - ✅ Все процессоры включены (звонки, банкротства, комментарии, списания)
-            - ✅ Полная поддержка EasyOCR для капчи
-            - ✅ Встроенный OpenAI API ключ
-            - ✅ Исправлен автообновлятор (robocopy + ren)
+            **Features:**
+            - Full macOS support with .app bundle
+            - All processors included (calls, bankruptcy, comments, writeoffs)
+            - EasyOCR captcha support
+            - Built-in OpenAI API key
+            - Fixed auto-updater (Windows only)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-```
-
----
-
-## 🎯 ЧТО ПОЛУЧИТСЯ:
-
-**macOS архив содержит:**
-```
-CreditBot-macOS/
-├── CreditBot.app          ← macOS приложение (двойной клик работает!)
-└── start.command          ← Автоснятие quarantine + запуск
